# UneexLinux

./: Show.c
01_TerminalProject/: Makefile
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_scenario_1  gdb_scenario_2  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: configure.ac
08_I18n/po/: Makefile.am  ru.po
08_I18n/src/: prog.c
09_PatchDiff/: Makefile  maze.c  patch_1  patch_2  patch_3
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  test.h  test_clear_noop.c  test_grow_trunc.c  test_init_free.c  test_pop.c  test_push_[].c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: prog.c
