#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([Guess the number program], [1.0], [potapter@mail.ru], [prog])
AM_INIT_AUTOMAKE([foreign subdir-objects])
DX_INIT_DOXYGEN([prog])
AC_CONFIG_SRCDIR([src/prog.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdio.h libintl.h locale.h string.h stdbool.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile Doxyfile])
AC_OUTPUT
